@@ -7,8 +7,20 @@ import io.protostuff.Schema;
 import io.protostuff.runtime.RuntimeSchema;
 import lombok.extern.slf4j.Slf4j;
 
+/**
+ * pojo 处理
+ *
+ * @author: wxd-gaming(無心道, 15388152619)
+ * @version: 2024-08-17 21:03
+ */
 @Slf4j
 public class SerializerUtil {
+
+
+    public static <T> byte[] encode(T object) {
+        Class<T> aClass = (Class<T>) object.getClass();
+        return encode(object, aClass);
+    }
 
     public static <T> byte[] encode(T object, Class<T> clazz) {
         Schema<T> schema = RuntimeSchema.getSchema(clazz);
@@ -16,17 +28,11 @@ public class SerializerUtil {
         return ProtostuffIOUtil.toByteArray(object, schema, buffer);
     }
 
-    public static <T> byte[] encode(T object) {
-        Class aClass = object.getClass();
-        Schema<T> schema = RuntimeSchema.getSchema(aClass);
-        LinkedBuffer buffer = LinkedBuffer.allocate();
-        return ProtostuffIOUtil.toByteArray(object, schema, buffer);
-    }
 
     public static <T> T decode(byte[] bytes, Class<T> clazz) {
         T object;
         try {
-            object = clazz.newInstance();
+            object = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception var4) {
             throw new RuntimeException("Protostuff反序列化时创建实例失败,Class:" + clazz.getName(), var4);
         }
